# loggerservice

./: CMakeLists.txt  loggerService.service  publisher
include/: ipclib.h  logger.h  simplelogger.h
src/: CMakeLists.txt  app.cpp  sender.cpp
